syntax = "proto3";
option go_package = "/github.com/TensShinet/WeFile/service/id_generator/proto";
package go.micro.service.id_generator;

service GenerateIDService {
  // 获取全局唯一自增 id
  rpc GenerateID(IDReq) returns (IDResp) {}
}

message IDReq {}

message IDResp {
  int64 id = 1;
  Error err = 2;
}

message Error {
  int32 code = 1;
  string message = 2;
}